# udamanami

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  a.json  deploy.sh  entrypoint.sh  generate_entity.sh  railway.toml
.github/workflows/: ci.yml  deploy.yml  main.yml  pr_notification.yml
app/: Cargo.toml  Dockerfile
app/deploy/: setup-github-wif.sh  udamanami.env.example
app/src/: calculator.rs  db.rs  lib.rs  main.rs  parser.rs  summarizer.rs  workers_api.rs
app/src/ai/: decorate_output.rs  engine.rs  message.rs  mod.rs  models.rs  prompt.rs
app/src/ai/tools/: memory.rs  mod.rs  profile.rs  shared_utils.rs  watch.rs  web_fetch_wikipedia.rs  web_search_wikipedia.rs
app/src/commands/: allowreply.rs  auto.rs  bf.rs  calc.rs  calcsay.rs  cclemon.rs  channel.rs  clear.rs  deletevar.rs  dice.rs  endauto.rs  imakita.rs  jail.rs  listvar.rs  memory.rs  mod.rs  summarize.rs  unjail.rs  var.rs  varbulk.rs
app/src/db/: mod.rs  workers_api.rs
app/src/db/entity/: message.rs
app/src/db/migrator/: m20250429_000001_create_tables.rs  m20250526_000002_room_pointer.rs  mod.rs
deploy/: README.md  cloud-init.yaml  setup-gcp.sh  setup-github-wif.sh  udamanami.env.example
docs/: 001_sketch.md  002_deploy.md  003_observability.md
infra/: README.md  import.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
shared/: Cargo.toml
shared/src/: lib.rs
src/: ai.rs  calculate.rs  calculator.rs  cclemon.rs  lib.rs  main.rs  parser.rs
src/commands/: auto.rs  bf.rs  calc.rs  calcsay.rs  cclemon.rs  channel.rs  clear.rs  deletevar.rs  dice.rs  effort.rs  endauto.rs  fetch.rs  gemini.rs  help.rs  imakita.rs  isprime.rs  jail.rs  listvar.rs  mod.rs  model.rs  ping.rs  unjail.rs  var.rs  varbulk.rs
src/db/: mod.rs
src/db/entity/: calc_var.rs  channel.rs  mod.rs  prelude.rs  relations.rs  user.rs
src/db/migrator/: m20250429_000001_create_tables.rs  mod.rs
workers/: .gitignore  Cargo.toml  wrangler.toml
workers/.cargo/: config.toml
workers/migrations/: 0001_create_tables.sql  0002_add_user_profile.sql  0003_add_channel_reply.sql  0004_add_channel_summary.sql
workers/src/: calcvar.rs  channel.rs  lib.rs  memory.rs  message.rs  user.rs
