[package]
name = "udamanami"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dashmap = "6.1.0"
nom = "7.1.3"
rand = "0.8.5"
regex = "1.11.0"
serenity = { version = "0.12.0", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tokio = "1.26.0"
tracing = "0.1.37"
nom = "7.1.3"