[package]
name = "udamanami"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
dashmap = "6.1.0"
nom = "7.1.3"
rand = "0.8.5"
regex = "1.11.0"
serenity = { version = "0.12.0", default-features = false, features = [
  "builder",
  "client",
  "collector",
  "gateway",
  "rustls_backend",
  "model",
] }
shuttle-runtime = "0.48.0"
shuttle-serenity = "0.48.0"
tokio = "1.26.0"
tracing = "0.1.37"
rand_distr = "0.4.3"
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.132"
serde = "1.0.215"
async-openai = "0.26.0"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
manual_let_else = "warn"
str_to_string = "warn"
string_to_string = "warn"
