[package]
name = "udamanami"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
dashmap = "6.1.0"
nom = "8.0.0"
rand = "0.9.1"
regex = "1.11.1"
serenity = { version = "0.12.4", default-features = false, features = [
  "builder",
  "client",
  "collector",
  "gateway",
  "rustls_backend",
  "model",
  "chrono",
] }
shuttle-runtime = "0.55.0"
shuttle-serenity = "0.55.0"
tokio = "1.45.1"
tracing = "0.1.41"
rand_distr = "0.5.1"
strum = { version = "0.27.1", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.11", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-json",
] }
sea-orm-migration = "1.1.11"
chrono = { version = "0.4.41", features = ["serde"] }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
manual_let_else = "warn"
str_to_string = "warn"
string_to_string = "warn"
