[package]
name = "udamanami-workers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# workers-rs。バージョンは実装着手時に最新を確認すること。
worker = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
udamanami-shared = { path = "../shared" }

[profile.release]
opt-level = "s"
lto = true
