[package]
name = "udamanami-workers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# workers/Cargo.toml
worker = { version = "0.8.5", features = ["d1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
udamanami-shared = { path = "../shared" }
chrono = "0.4.45"

[profile.release]
opt-level = "s"
lto = true
