[package]
name = "udamanami-workers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# workers/Cargo.toml
worker = { version = "0.8.5", features = ["d1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
udamanami-shared = { path = "../shared" }
chrono = "0.4.45"
uuid = { version = "1", features = ["v4", "js"] }
constant_time_eq = "0.5.0"

[profile.release]
opt-level = "s"
lto = true
